--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "papercrafter",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.5",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
@@ -19,10 +18,7 @@
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
     "npm": "^6.8.0",
-    "passport": "^0.4.0",
-    "passport-kakao": "0.0.5",
-    "passport-local": "^1.0.0",
     "pug": "^2.0.3",
-    "sequelize": "^4.43.0"
+    "sequelize":"5.2.3"
   }
 }
